--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,22 +6,24 @@
   {%- seo title=false -%}
 
   {% if page.robots %}
-    <meta name="robots" content="{{page.robots}}" />
+  <meta name="robots" content="{{page.robots}}" />
   {% endif %}
 
   {%- if site.listen_for_clients_preferred_style -%}
-    <link rel="stylesheet" type="text/css" href="{{ "/assets/main.css" | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="{{ " /assets/main.css" | relative_url }}">
   {%- else -%}
-    {%- if site.style == 'light' -%}
-      <link rel="stylesheet" type="text/css" href="{{ "/assets/main-light.css" | relative_url }}">
-    {%- elsif site.style == 'hacker' -%}
-      <link rel="stylesheet" type="text/css" href="{{ "/assets/main-hacker.css" | relative_url }}">
-    {%- else -%}
-      <link rel="stylesheet" type="text/css" href="{{ "/assets/main-dark.css" | relative_url }}">
-    {%- endif -%}
+  {%- if site.style == 'nord' -%}
+  <link rel="stylesheet" type="text/css" href="{{ "/assets/main-nord.css" | relative_url }}">
+  {%- elsif site.style == 'light' -%}
+  <link rel="stylesheet" type="text/css" href="{{ " /assets/main-light.css" | relative_url }}">
+  {%- elsif site.style == 'hacker' -%}
+  <link rel="stylesheet" type="text/css" href="{{ " /assets/main-hacker.css" | relative_url }}">
+  {%- else -%}
+  <link rel="stylesheet" type="text/css" href="{{ " /assets/main-dark.css" | relative_url }}">
+  {%- endif -%}
   {%- endif -%}
 
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
+  {%- include google-analytics.html -%}
   {%- endif -%}
 </head>
