--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+{%- assign default_paths = site.html_pages | map: 'path' -%}
 {%- assign page_paths = site.header_pages | default: default_paths -%}
 <header>
   <div class="menu">
@@ -5,7 +6,9 @@
       {%- for path in page_paths -%}
         {%- assign my_page = site.pages | where: "path", path | first -%}
         {%- if my_page.title -%}
-        <li><a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li>
+        <li>
+          <a href="{{ my_page.url | relative_url }}"{% if page.url == my_page.url %} aria-current="page"{% endif %}>{{ my_page.title | escape }}</a>
+        </li>
         {%- endif -%}
       {%- endfor -%}
     </ul>
