--- a/assets/main-dark.scss
+++ b/assets/main-dark.scss
@@ -2,5 +2,7 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "dark";
-@import "base";
+@use "dark";
+@use "base";
+
+@include dark.theme();
