--- a/assets/main-hacker.scss
+++ b/assets/main-hacker.scss
@@ -2,5 +2,7 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "hacker";
-@import "base";
+@use "hacker";
+@use "base";
+
+@include hacker.theme();
