--- a/assets/main-light.scss
+++ b/assets/main-light.scss
@@ -2,5 +2,7 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "light";
-@import "base";
+@use "light";
+@use "base";
+
+@include light.theme();
