--- a/assets/main-nord.scss
+++ b/assets/main-nord.scss
@@ -2,5 +2,7 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "nord";
-@import "base";
+@use "nord";
+@use "base";
+
+@include nord.theme();
