--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,9 +2,12 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "light";
-@import "base";
+@use "light";
+@use "dark";
+@use "base";
+
+@include light.theme();
 
 @media (prefers-color-scheme: dark) {
-	@import "dark";
+  @include dark.theme();
 }
