--- a/assets/main-light.scss
+++ b/assets/main-light.scss
@@ -2,7 +2,8 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@use "light";
-@use "base";
+// Use @import for compatibility with GitHub Pages (libsass)
+@import "light";
+@import "base";
 
-@include light.theme();
+@include theme();
