--- a/assets/main-dark.scss
+++ b/assets/main-dark.scss
@@ -2,7 +2,8 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@use "dark";
-@use "base";
+// Use @import for compatibility with GitHub Pages (libsass)
+@import "dark";
+@import "base";
 
-@include dark.theme();
+@include theme();
