--- a/assets/main-nord.scss
+++ b/assets/main-nord.scss
@@ -2,7 +2,8 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@use "nord";
-@use "base";
+// Use @import for compatibility with GitHub Pages (libsass)
+@import "nord";
+@import "base";
 
-@include nord.theme();
+@include theme();
