Replace google-analytics with a general tracker support

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
   {%- endif -%}
   {%- endif -%}
 
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
-  {%- include google-analytics.html -%}
+  {%- if jekyll.environment == 'production' and site.tracking -%}
+  {%- include tracker.html -%}
   {%- endif -%}
 </head>
