--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@
 {%- endcomment -%}
 {%- capture csp -%}
 default-src 'none';
-connect-src 'self';
+connect-src 'self' {%- if site.csp_extra %}{%- for url in site.csp_extra %}'{{ url }}'{%- endfor %}{%- endif -%};
+script-src 'self' {%- if site.csp_extra %}{%- for url in site.csp_extra %}'{{ url }}'{%- endfor %}{%- endif -%};
 base-uri 'self';
 form-action 'none';
 img-src 'self' https: data:;
@@ -17,7 +18,6 @@ font-src 'self' https://fonts.gstatic.com data:;
 media-src 'self';
 object-src 'none';
 child-src 'self';
-script-src 'self';
 {%- endcapture -%}
 {%- capture csp_final -%}{{ csp | strip | replace: '\n', ' ' }} {%- if site.csp_extra %} {{ site.csp_extra }}{%- endif -%}{%- endcapture -%}
 <meta http-equiv="Content-Security-Policy" content="{{ csp_final | strip }}" />
